fixed flickering while scroling

--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,6 @@
   --font-color: #a8a9b0;
   --link-color: lightblue;
   --text-color-1: rgb(24, 236, 165);
-  --text-color-2: rgba(214, 255, 127, 1);
-  --headline-color: white;
-  background: #141E30;
-  background: linear-gradient(to right, #243B55, #141E30);
 }
 
 html {
@@ -22,8 +18,9 @@ body {
   min-height: 100vh;
   background-color: var(--bg-color);
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   color: var(--font-color);
+  background: url("asset/img/royal.jpg") no-repeat center center fixed;
 }
 h1 {
   font-size: 36px;
@@ -81,7 +78,7 @@ nav li a {
   padding: 1rem;
   font-size: 20px;
   color: rgb(24, 236, 165);
-  font-family: 'Courier New', Courier, monospace
+  font-family: "Courier New", Courier, monospace;
 }
 
 main {
@@ -125,17 +122,6 @@ main {
   background-color: var(--bg-color);
 }
 
-main hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  width: 0;
-  border-top: 1px solid #cdced5;
-  position: absolute;
-  bottom: 8px;
-  animation: slide-in 1s cubic-bezier(0.42, 0, 1, 1) forwards;
-}
-
 .user-bio {
   animation: fadeInUp 1s cubic-bezier(0.075, 0.82, 0.165, 1) 1s forwards;
 }
@@ -153,7 +139,7 @@ main hr {
 }
 
 .quote-container p {
-  color: rgb(53, 20, 6);
+  color: rgb(55, 14, 15);
 }
 
 .quote-container:hover {
@@ -164,7 +150,7 @@ main hr {
   font-size: 35px;
   text-align: left;
   margin-left: 1rem;
-  font-family: 'Courier New', Courier, monospace
+  font-family: "Courier New", Courier, monospace;
 }
 
 .project-container {
@@ -303,7 +289,9 @@ footer {
     margin-left: 20%;
     margin-right: 20%;
   }
-  #about, #project, nav ul {
+  #about,
+  #project,
+  nav ul {
     margin-left: 30%;
     margin-right: 30%;
   }
@@ -377,7 +365,8 @@ footer {
   font-size: 2rem;
   background: transparent;
   animation: animated_text 10s ease-in-out infinite;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 .center {
